Change legend color for Wikidata QID

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             <span>KE (Yeni Öğe)</span>
         </div>
         <div class="legend-item">
-            <div class="legend-color" style="background: #9b59b6;"></div>
+            <div class="legend-color" style="background: #f1c40f;"></div>
             <span>Wikidata QID</span>
         </div>
     </div>
