--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.2);
             z-index: 1000;
-            max-width: 300px;
-            max-height: 80vh;
+            width: 380px;
+            max-height: calc(100vh - 20px);
             overflow-y: auto;
         }
         
