--- a/index.html
+++ b/index.html
@@ -117,10 +117,13 @@
         
         @media (max-width: 768px) {
             .legend {
-                display: none;
+                display: none !important;
             }
             .stats-panel {
-                display: none;
+                display: none !important;
+            }
+            .controls {
+                display: none !important;
             }
             #map {
                 height: 100vh !important;
