--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
                 left: 0;
                 width: 100%;
                 height: 50vh;
-                max-height: 50vh;
+                max-height: 90vh;
+                min-height: 20vh;
                 border-radius: 0 0 16px 16px;
-                resize: none;
+                resize: vertical;
             }
         }
         
@@ -123,7 +124,10 @@
                 display: none !important;
             }
             .controls {
-                display: none !important;
+                top: 10px;
+                left: 50%;
+                transform: translateX(-50%);
+                z-index: 1001;
             }
             #map {
                 height: 100vh !important;
