--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 min-height: 20vh;
                 border-radius: 0 0 16px 16px;
                 resize: vertical;
+                overflow: hidden;
                 z-index: 1001;
             }
         }
