--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
                 overflow: hidden;
                 z-index: 1001;
             }
+            
+            .info-panel::after {
+                content: '';
+                position: absolute;
+                bottom: 8px;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 40px;
+                height: 4px;
+                background: #bdc3c7;
+                border-radius: 2px;
+                pointer-events: none;
+            }
         }
         
         .info-panel h3 {
