--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             z-index: 1000;
             width: 380px;
             height: 600px;
-            overflow-y: auto;
+            overflow: hidden;
             resize: vertical;
             min-height: 300px;
             max-height: calc(100vh - 20px);
