--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             resize: vertical;
             min-height: 300px;
             max-height: calc(100vh - 20px);
+            box-sizing: border-box;
         }
         
         @media (max-width: 768px) {
