--- a/index.html
+++ b/index.html
@@ -33,19 +33,23 @@
         .info-panel {
             position: absolute;
             top: 10px;
-            right: 10px;
+            right: 0;
             background: white;
             padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+            border-radius: 8px 0 0 8px;
+            box-shadow: -2px 2px 10px rgba(0,0,0,0.2);
             z-index: 1000;
             width: 380px;
             height: 600px;
             overflow: hidden;
             resize: vertical;
             min-height: 300px;
-            max-height: calc(100vh - 20px);
+            max-height: calc(100vh - 60px);
             box-sizing: border-box;
+        }
+        
+        .info-panel > * {
+            position: relative;
         }
         
         @media (max-width: 768px) {
