--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 top: 0;
                 right: 0;
                 left: 0;
+                bottom: auto;
                 width: 100%;
                 height: 50vh;
                 max-height: 90vh;
@@ -69,6 +70,11 @@
                 resize: vertical;
                 overflow: hidden;
                 z-index: 1001;
+            }
+            
+            /* Leaflet attribution - mobile'da sağda */
+            .leaflet-bottom.leaflet-right {
+                right: 10px !important;
             }
             
             .info-panel::after {
