--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
         <div style="position: relative;">
             <input type="text" 
                    id="wikidataSearch" 
-                   placeholder="Vikiveri'da ara" 
+                   placeholder="Vikiveri'de ara" 
                    autocomplete="off"
                    style="width: 100%; padding: 8px 35px 8px 12px; border: 2px solid #ddd; border-radius: 8px; font-size: 13px; transition: border-color 0.2s; box-sizing: border-box; background: white; box-shadow: 0 2px 8px rgba(0,0,0,0.1);"
                    onfocus="this.style.borderColor='#3498db'"
